--- a/cv/FreelsJK_2016CV.Rmd
+++ b/cv/FreelsJK_2016CV.Rmd
@@ -1,13 +1,14 @@
 ---
 layout: page
 title: Curriculum Vita
+output: html_document
 ---
 
 <a style="position: fixed; bottom:5px;left:25px; font-size:14px; font-weight:bold; color:#f7f7f7; padding:0 5px; border: solid thin #cc5500; border-radius: 10px; background-color: #cc5500;" href="#" title="Go to the top">Back to Top</a>
 
-<link href="cv.css" type="text/css" rel="stylesheet">
+<link href="cv-print.css" type="text/css" rel="stylesheet">
 
-<table style='width:100%; margin:0 0 0 5%; font-size: 22px; float: top;'>
+<table style='width:100%; margin:0; font-size: 22px; float: top;'>
 <tr><td align='left'>Maj Jason Freels</td><td align='right'><b>comm:</b> 937.255.3636 ext. 4676</td></tr>
 <tr><td align='left'>Air Force Institute of Technology</td><td align="right"><b>DSN:</b> 785.3636 </td></tr>
 <tr><td align="left">Dept. of Systems Engineering and Management</td><td align="right"><b>cell:</b> 937.430.6619</td></tr>
