--- a/cv/FreelsJK_2016CV.Rmd
+++ b/cv/FreelsJK_2016CV.Rmd
@@ -1,7 +1,7 @@
 ---
+title: "Curriculum Vita"
+output: word_document
 layout: page
-title: Curriculum Vita
-output: html_document
 ---
 
 <a style="position: fixed; bottom:5px;left:25px; font-size:14px; font-weight:bold; color:#f7f7f7; padding:0 5px; border: solid thin #cc5500; border-radius: 10px; background-color: #cc5500;" href="#" title="Go to the top">Back to Top</a>
